--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,9 +9,9 @@
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
+    --primary: 220 100% 65%;
     --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
+    --secondary: 30, 80%, 60%;
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
@@ -27,16 +27,16 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-    --radius: 0.5rem
+    --radius: 0.5rem;
   }
   .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
+    --background: 0 0% 21%;
+    --foreground: 0 0% 100%;
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
+    --primary: 220 100% 65%;
     --primary-foreground: 0 0% 9%;
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
@@ -53,7 +53,102 @@
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%
+    --chart-5: 340 75% 55%;
+  }
+
+  body {
+    font-family: "Montserrat", serif;
+  }
+
+  h1 {
+    @apply text-2xl md:text-3xl font-semibold tracking-wide;
+  }
+
+  h2 {
+    @apply text-xl md:text-2xl font-semibold tracking-wide;
+  }
+
+  h3 {
+    @apply text-lg font-semibold;
+  }
+
+  .link {
+    @apply underline hover:no-underline underline-offset-4 outline-none focus:outline-1 focus:outline-offset-4 focus:outline-foreground;
+  }
+
+  .button {
+    @apply flex items-center justify-center text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2;
+  }
+
+  .button:disabled {
+    @apply flex items-center justify-center cursor-not-allowed text-white bg-gradient-to-r from-gray-500 via-gray-600 to-gray-700 shadow-lg shadow-gray-500/50 dark:shadow-lg dark:shadow-gray-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2;
+  }
+
+  /* FORM INPUTS */
+  .label {
+    @apply block mb-2 text-sm font-medium text-gray-900 dark:text-white;
+  }
+
+  .label[data-status="success"] {
+    @apply block mb-2 text-sm font-medium text-green-700 dark:text-green-500;
+  }
+
+  .label[data-status="error"] {
+    @apply block mb-2 text-sm font-medium text-red-700 dark:text-red-500;
+  }
+
+  .textarea {
+    @apply block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
+  }
+
+  .textarea[data-status="success"] {
+    @apply block p-2.5 w-full text-sm rounded-lg border bg-green-50  border-green-500 focus:ring-green-500 focus:border-green-500 dark:bg-gray-700 dark:border-green-500;
+  }
+
+  .textarea[data-status="error"] {
+    @apply block p-2.5 w-full text-sm bg-red-50 border border-red-500 rounded-lg focus:ring-red-500 dark:bg-gray-700 focus:border-red-500  dark:border-red-500;
+  }
+
+  .text-input {
+    @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
+  }
+
+  .text-input[data-status="success"] {
+    @apply text-sm rounded-lg block w-full p-2.5 bg-green-50 border border-green-500 focus:ring-green-500 focus:border-green-500 dark:bg-gray-700 dark:border-green-500;
+  }
+
+  .text-input[data-status="error"] {
+    @apply bg-red-50 border border-red-500 text-sm rounded-lg focus:ring-red-500 dark:bg-gray-700 focus:border-red-500 block w-full p-2.5 dark:border-red-500;
+  }
+
+  /* RANDOM GLOBAL OVERWRITES */
+
+  /* MAKE RECAPTCHA LOOK DISABLED WHEN FORM IS INVALID */
+  .recaptcha-wrapper {
+    position: relative;
+    display: inline-block;
+  }
+
+  .recaptcha-disabled {
+    pointer-events: none;
+    opacity: 0.6;
+  }
+
+  /* RESET CHROME AUTOFILL STYLES */
+  input.text-input:-webkit-autofill,
+  input.text-input:-webkit-autofill:hover,
+  input.text-input:-webkit-autofill:focus,
+  input.text-input:-webkit-autofill:active {
+    -webkit-text-fill-color: hsl(0 0% 3.9%) !important;
+    transition: background-color 5000s ease-in-out 0s;
+  }
+
+  .dark input.text-input:-webkit-autofill,
+  .dark input.text-input:-webkit-autofill:hover,
+  .dark input.text-input:-webkit-autofill:focus,
+  .dark input.text-input:-webkit-autofill:active {
+    -webkit-text-fill-color: hsl(0 0% 98%) !important;
+    transition: background-color 5000s ease-in-out 0s;
   }
 }
 @layer base {
