--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -6,12 +6,12 @@ import { MenuIcon } from "astro-feather";
 
 <nav class="">
   <div
-    class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-6"
+    class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-6 md:px-12 lg:px-16"
   >
     <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
       <Image
         src={logo}
-        class="h-14 rounded-lg"
+        class="h-14 shadow-lg"
         alt="Abdul Aliyev Portfolio Homepage"
         width={55}
         height={55}
