--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,6 +1,6 @@
 ---
 import type { CollectionEntry } from "astro:content";
-import { ExternalLinkIcon, GithubIcon } from "astro-feather";
+import { ArrowRightIcon, ExternalLinkIcon, GithubIcon } from "astro-feather";
 
 const { project } = Astro.props;
 
@@ -10,46 +10,42 @@ interface Props {
 ---
 
 <div
-  class="w-full md:max-w-md mx-auto overflow-hidden shadow-lg dark:border dark:border-foreground"
+  class="lg:w-[360px] bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
 >
-  <div
-    class="border border-foreground mx-6 mt-6 flex items-center justify-center"
-  >
-    <a href={"/projects/" + project.slug}>
-      <img
-        src={"/images/" + project.data.thumbnail.url}
-        alt={project.data.thumbnail.alt}
-        class="w-full h-48 object-cover hover:opacity-75 transition duration-300 ease-in-out p-1"
-      />
-    </a>
-  </div>
+  <a href={"/projects/" + project.slug}>
+    <img
+      src={"/images/" + project.data.thumbnail.url}
+      alt={project.data.thumbnail.alt}
+      class="rounded-t-lg"
+    />
+  </a>
 
-  <div class="p-6">
-    <h3 class="mb-6">
-      <a class="link" href={"/projects/" + project.slug}>{project.data.title}</a
+  <div class="p-5">
+    <a href={"/projects/" + project.slug}>
+      <h5
+        class="mb-2 text-2xl font-bold tracking-tight text-foreground dark:text-foreground"
       >
-    </h3>
-    <p class="mb-6 leading-8">{project.data.excerpt}</p>
-    <ul class="flex space-x-6 items-center">
-      <li>
-        <a
-          href={`/projects/${project.slug}`}
-          class="flex items-center button"
-          title="Go to project details page"
-        >
-          Details
-        </a>
-      </li>
-      <li>
-        <a
-          href={project.data.githubRepoLinks[0]}
-          class="flex items-center button"
-          title="Visit project website"
-        >
-          <span class="mr-2">Visit</span>
-          <ExternalLinkIcon size={16} />
-        </a>
-      </li>
-    </ul>
+        {project.data.title}
+      </h5>
+    </a>
+    <p class="mb-4 font-normal text-foreground dark:text-foreground">
+      {project.data.excerpt}
+    </p>
+    <a
+      href={project.data.projectURL}
+      title="Visit project website"
+      class="button inline-flex mr-5"
+    >
+      <span class="mr-2">Visit</span>
+      <ExternalLinkIcon size={16} />
+    </a>
+    <a
+      href={`/projects/${project.slug}`}
+      title="Go to project details page"
+      class="button inline-flex"
+    >
+      <span class="mr-2">Read more</span>
+      <ArrowRightIcon size={16} />
+    </a>
   </div>
 </div>
