--- a/src/components/common/Separator.astro
+++ b/src/components/common/Separator.astro
@@ -1,3 +1,3 @@
-<div class="flex flex-col justify-center items-center w-full my-8">
+<div class="flex flex-col justify-center items-center w-full my-8 md:my-20">
   <div class="w-3/4 border-t border-t-foreground"></div>
 </div>
