Add a skeleton loader for the react contact form

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,6 +4,8 @@ import MainLayout from "@/layouts/MainLayout.astro";
 import ContactForm from "@/components/ContactForm.tsx";
 import { Alert } from "@/components/common/Alert";
 import { getEntry, type CollectionEntry } from "astro:content";
+import ContactFormLoading from "@/components/ContactFormLoading.astro";
+
 const RECAPTCHA_SITE_KEY = import.meta.env.RECAPTCHA_SITE_KEY;
 
 const validation: CollectionEntry<"validation"> = await getEntry(
@@ -16,10 +18,12 @@ const validation: CollectionEntry<"validation"> = await getEntry(
   <Alert client:load />
   <section class="w-full flex flex-col justify-center items-center">
     <ContactForm
-      client:only
+      client:only="react"
       recaptchaSiteKey={RECAPTCHA_SITE_KEY}
       validation={validation}
-    />
+    >
+      <ContactFormLoading slot="fallback" />
+    </ContactForm>
   </section>
   <Separator />
 </MainLayout>
