--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -1,6 +1,4 @@
 ---
-import { capitalize } from "@/lib/utils";
-
 const { tags } = Astro.props;
 
 interface Props {
@@ -8,17 +6,11 @@ interface Props {
 }
 ---
 
-<div class="flex flex-wrap gap-2">
+<div class="flex flex-wrap gap-2 my-8 :md:my-12">
   {
     tags.map((tag: string, index: number) => (
-      <span
-        class={
-          index % 2 == 0
-            ? "px-2 py-1 bg-green-500 text-white rounded-full text-xs hover:opacity-90"
-            : "px-2 py-1 bg-indigo-500 text-white rounded-full text-xs hover:opacity-90"
-        }
-      >
-        <a href={"/articles/tag/" + tag}>#{capitalize(tag)}</a>
+      <span class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full dark:bg-blue-900 dark:text-blue-300">
+        {tag}
       </span>
     ))
   }
