--- a/.vercel/output/functions/_render.func/src/pages/index.astro
+++ b/.vercel/output/functions/_render.func/src/pages/index.astro
@@ -6,7 +6,7 @@ import { getCollection } from "astro:content";
 import type { CollectionEntry } from "astro:content";
 import { getEntry } from "astro:content";
 import { Image } from "astro:assets";
-import myPhoto from "../images/default-avatar.png";
+import myPhoto from "../images/default-avatar.svg";
 import Separator from "@/components/common/Separator.astro";
 
 const homeUiContent: CollectionEntry<"ui"> = await getEntry("ui", "home")!;
