--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,19 @@
 ---
 import ProjectCard from "../components/ProjectCard.astro";
+import Projects from "../components/Projects.astro";
 import { HOMEPAGE_PROJECTS_LIMIT } from "../lib/constants";
 import MainLayout from "../layouts/MainLayout.astro";
 import { getCollection } from "astro:content";
 import type { CollectionEntry } from "astro:content";
 import { getEntry } from "astro:content";
 import { Image } from "astro:assets";
-import myPhoto from "../images/default-avatar.png";
+import myPhoto from "../images/default-avatar.svg";
 import Separator from "@/components/common/Separator.astro";
 
-const homeUiContent: CollectionEntry<"ui"> = await getEntry("ui", "home")!;
+const homeUiContent: CollectionEntry<"home"> = await getEntry(
+  "home",
+  "ui-content"
+)!;
 
 const allProjects: CollectionEntry<"project">[] = (
   await getCollection("project")
@@ -41,17 +45,6 @@ const { Content } = await homeUiContent.render();
     </div>
   </section>
   <Separator />
-  <section class="flex flex-col justify-center items-center w-full">
-    <h1 class="mb-8 md:mb-12">My Projects</h1>
-    <div
-      class="grid grid-cols-1 gap-8 sm:gap-12 md:gap-16 lg:grid-cols-2 xl:grid-cols-3 place-items-center w-full"
-    >
-      {
-        allProjects
-          // .slice(0, HOMEPAGE_PROJECTS_LIMIT)
-          .map((project) => <ProjectCard project={project} />)
-      }
-    </div>
-  </section>
+  <Projects />
   <Separator />
 </MainLayout>
