Add breadcrumbs component

--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,7 +1,9 @@
 ---
+import BreadCrumbs from "@/components/common/BreadCrumbs.astro";
 import MainLayout from "@/layouts/MainLayout.astro";
 ---
 
 <MainLayout>
+  <BreadCrumbs />
   <h1>Projects</h1>
 </MainLayout>
