--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,10 +5,9 @@ import MainLayout from "../layouts/MainLayout.astro";
 import { getCollection } from "astro:content";
 import type { CollectionEntry } from "astro:content";
 import { getEntry } from "astro:content";
-import { Image } from "astro:assets";
-import myPhoto from "../images/default-avatar.svg";
 import Separator from "@/components/common/Separator.astro";
 import BreadCrumbs from "@/components/common/BreadCrumbs.astro";
+import { Image } from "astro:assets";
 
 const aboutUiContent: CollectionEntry<"about"> = await getEntry(
   "about",
@@ -24,7 +23,7 @@ const { Content } = await aboutUiContent.render();
     <h1 class="mb-8 md:mb-12">About Me</h1>
     <div class="flex items-center justify-center">
       <Image
-        src={myPhoto}
+        src="https://res.cloudinary.com/dceqefagi/image/upload/v1735266034/default-avatar_r1t1ua.svg"
         class="min-h-20 md:w-36 md:h-36 rounded-full w-24 h-24 shadow-lg"
         alt="Abdul Aliyev Photo"
         width={200}
