--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,8 +30,8 @@ const { Content } = await homeUiContent.render();
   <section class="grid grid-cols-1 gap-5 lg:grid-cols-2">
     <div class="w-full flex justify-center items-center md:mb-0">
       <div class="flex items-center justify-center">
-        <Image
-          src={myPhoto}
+        <img
+          src="https://res.cloudinary.com/dceqefagi/image/upload/v1735266034/default-avatar_r1t1ua.svg"
           class="min-h-20 md:w-36 md:h-36 rounded-full w-24 h-24 shadow-lg"
           alt="Abdul Aliyev Photo"
           width={200}
