Update VistaShopVerse images

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -16,7 +16,7 @@ interface Props {
     <img
       src={"/images/" + project.data.thumbnail.url}
       alt={project.data.thumbnail.alt}
-      class="rounded-t-lg"
+      class="rounded-t-lg object-cover object-center"
     />
   </a>
 
