--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -10,7 +10,7 @@ const currentPath = Astro.url.pathname;
 
 <nav class="">
   <div
-    class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-6 md:px-12 lg:px-16"
+    class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto pt-8 pb-6 side-spacing"
   >
     <a
       href="/"
@@ -29,7 +29,7 @@ const currentPath = Astro.url.pathname;
     <button
       data-collapse-toggle="navbar-default"
       type="button"
-      class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm md:hidden"
+      class="inline-flex items-center p-2 -mr-2 w-10 h-10 justify-center text-sm md:hidden"
       aria-controls="navbar-default"
       aria-expanded="false"
     >
