--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -61,6 +61,10 @@
     font-family: "Montserrat", "Arial", sans-serif;
   }
 
+  .side-spacing {
+    @apply px-8 md:px-12 lg:px-16;
+  }
+
   h1 {
     @apply text-2xl md:text-3xl font-semibold tracking-wide;
   }
@@ -173,6 +177,14 @@
   .recaptcha-disabled {
     pointer-events: none;
     opacity: 0.6;
+    opacity: 0;
+    height: 0 !important;
+    overflow: hidden !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    position: absolute !important;
+    top: -9999px !important;
+    left: -9999px !important;
   }
 
   /* RESET CHROME AUTOFILL STYLES */
