--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -72,9 +72,7 @@ const schema = {
   </head>
   <body>
     {showNav && <Navbar />}
-    <main
-      class="container mx-auto max-w-screen-xl mt-5 md:mt-10 px-6 md:px-12 lg:px-16"
-    >
+    <main class="container mx-auto max-w-screen-xl mt-5 md:mt-10 side-spacing">
       <slot />
     </main>
     {showFooter && <Footer />}
