--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,6 +5,7 @@ import ContactForm from "@/components/ContactForm.tsx";
 import { Alert } from "@/components/common/Alert";
 import { getEntry, type CollectionEntry } from "astro:content";
 import ContactFormLoading from "@/components/ContactFormLoading.astro";
+import BreadCrumbs from "@/components/common/BreadCrumbs.astro";
 
 const RECAPTCHA_SITE_KEY = import.meta.env.RECAPTCHA_SITE_KEY;
 
@@ -15,6 +16,7 @@ const validation: CollectionEntry<"validation"> = await getEntry(
 ---
 
 <MainLayout>
+  <BreadCrumbs />
   <Alert client:load />
   <section class="w-full flex flex-col justify-center items-center">
     <ContactForm
