--- a/src/components/common/Separator.astro
+++ b/src/components/common/Separator.astro
@@ -1,3 +1,16 @@
-<div class="flex flex-col justify-center items-center w-full my-8 md:my-20">
+---
+const { customClasses = "", includeVerticalSpacing = true } = Astro.props;
+
+interface Props {
+  customClasses?: string;
+  includeVerticalSpacing?: boolean;
+}
+
+const verticalSpacing = includeVerticalSpacing ? "my-8 md:my-20" : "";
+---
+
+<div
+  class={`flex flex-col justify-center items-center w-full ${verticalSpacing} ${customClasses}`}
+>
   <div class="w-3/4 border-t border-t-foreground"></div>
 </div>
