--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -20,8 +20,8 @@ const { Content } = await aboutUiContent.render();
 <MainLayout>
   <BreadCrumbs />
   <section class="flex flex-col justify-center items-center w-full">
-    <h1 class="mb-8 md:mb-12">About Me</h1>
-    <div class="flex items-center justify-center">
+    <h1>About Me</h1>
+    <!-- <div class="flex items-center justify-center mt-8 md:mt-12">
       <Image
         src="https://res.cloudinary.com/dceqefagi/image/upload/v1735266034/default-avatar_r1t1ua.svg"
         class="min-h-20 md:w-36 md:h-36 rounded-full w-24 h-24 shadow-lg"
@@ -29,7 +29,7 @@ const { Content } = await aboutUiContent.render();
         width={200}
         height={200}
       />
-    </div>
+    </div> -->
 
     <article
       id="about-me-content-section"
