--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import type { CollectionEntry } from "astro:content";
 import { getCollection, getEntry } from "astro:content";
 import Projects from "../components/Projects.astro";
 import MainLayout from "../layouts/MainLayout.astro";
+import { MailIcon } from "astro-feather";
 import { Image } from "astro:assets";
 
 const homeUiContent: CollectionEntry<"home"> = await getEntry(
@@ -23,7 +24,7 @@ const { Content } = await homeUiContent.render();
 ---
 
 <MainLayout>
-  <section class="grid grid-cols-1 gap-5 lg:grid-cols-2">
+  <!-- <section class="grid grid-cols-1 gap-5 lg:grid-cols-2">
     <div class="w-full flex justify-center items-center md:mb-0">
       <div class="flex items-center justify-center">
         <Image
@@ -39,6 +40,17 @@ const { Content } = await homeUiContent.render();
       <h1 class="mb-5 md:mb-8 md:leading-relaxed text-center">{mainTitle}</h1>
       <article class="leading-relaxed md:leading-loose"><Content /></article>
     </div>
+  </section> -->
+  <section class="max-w-2xl flex flex-col items-center justify-center mx-auto">
+    <h1 class="mb-5 md:mb-8 md:leading-relaxed text-center">{mainTitle}</h1>
+    <article class="leading-relaxed md:leading-loose"><Content /></article>
+    <p class="mt-8">
+      If you&apos;re interested in learning more about my work, let&apos;s
+      connect!
+    </p>
+    <a href="/contact" class="button button-lg mt-4"
+      ><MailIcon size={16} /> Get in touch</a
+    >
   </section>
   <Separator />
   <Projects />
