--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,24 +4,24 @@
 @layer base {
   :root {
     --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 3.9%;
-    --primary: 220 100% 65%;
+    --foreground: 240 10% 3.9%;
+    --primary: 240 5.9% 10%;
     --primary-foreground: 0 0% 98%;
-    --secondary: 30, 80%, 60%;
-    --secondary-foreground: 0 0% 9%;
-    --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
+    --accent: 240 4.8% 95.9%;
+    --accent-foreground: 240 5.9% 10%;
+    --border: 240 5.9% 90%;
+    --input: 240 5.9% 90%;
+    --card: 0 0% 100%;
+    --card-foreground: 240 10% 3.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 240 10% 3.9%;
+    --secondary: 240 4.8% 95.9%;
+    --secondary-foreground: 240 5.9% 10%;
+    --muted: 240 4.8% 95.9%;
+    --muted-foreground: 240 3.8% 46.1%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89.8%;
-    --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
+    --ring: 240 10% 3.9%;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
@@ -29,26 +29,27 @@
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
+
   .dark {
-    --background: 0 0% 21%;
-    --foreground: 0 0% 100%;
-    --card: 0 0% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 0 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 220 100% 65%;
-    --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
+    --background: 240 10% 3.9%;
+    --foreground: 0 0% 98%;
+    --primary: 0 0% 98%;
+    --primary-foreground: 240 5.9% 10%;
+    --accent: 240 3.7% 15.9%;
     --accent-foreground: 0 0% 98%;
+    --border: 240 3.7% 15.9%;
+    --input: 240 3.7% 15.9%;
+    --card: 240 10% 3.9%;
+    --card-foreground: 0 0% 98%;
+    --popover: 240 10% 3.9%;
+    --popover-foreground: 0 0% 98%;
+    --secondary: 240 3.7% 15.9%;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 240 3.7% 15.9%;
+    --muted-foreground: 240 5% 64.9%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
+    --ring: 240 4.9% 83.9%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
@@ -76,12 +77,52 @@
     @apply underline hover:no-underline underline-offset-4 outline-none focus:outline-1 focus:outline-offset-4 focus:outline-foreground;
   }
 
-  .button {
+  /* .button {
     @apply flex items-center justify-center text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow shadow-blue-500/50 dark:shadow dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2;
   }
 
   .button:disabled {
     @apply flex items-center justify-center cursor-not-allowed text-white bg-gradient-to-r from-gray-500 via-gray-600 to-gray-700 shadow-lg shadow-gray-500/50 dark:shadow-lg dark:shadow-gray-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2;
+  } */
+
+  .button {
+    @apply h-10 px-4 py-2 bg-primary text-primary-foreground hover:bg-primary/90 inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0;
+  }
+
+  /* .button.button-default {
+    @apply bg-primary text-primary-foreground hover:bg-primary/90;
+  } */
+
+  .button.button-destructive {
+    @apply bg-destructive text-destructive-foreground hover:bg-destructive/90;
+  }
+
+  .button.button-outline {
+    @apply border border-input bg-background hover:bg-accent hover:text-accent-foreground;
+  }
+
+  .button.button-secondary {
+    @apply bg-secondary text-secondary-foreground hover:bg-secondary/80;
+  }
+
+  .button.button-ghost {
+    @apply hover:bg-accent hover:text-accent-foreground;
+  }
+
+  .button.button-link {
+    @apply text-primary underline-offset-4 hover:underline;
+  }
+
+  .button.button-sm {
+    @apply h-9 rounded-md px-3;
+  }
+
+  .button.button-lg {
+    @apply h-11 rounded-md px-8;
+  }
+
+  .button.button-icon {
+    @apply h-10 w-10;
   }
 
   /* FORM INPUTS */
@@ -98,27 +139,27 @@
   }
 
   .textarea {
-    @apply text-foreground bg-background block p-2.5 w-full text-sm   rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400  dark:focus:ring-blue-500 dark:focus:border-blue-500;
+    @apply text-foreground bg-background block p-2.5 w-full text-sm   rounded-lg border dark:border-gray-100 focus:ring-blue-500 focus:border-blue-500   dark:placeholder-gray-100  dark:focus:ring-blue-500 dark:focus:border-blue-500;
   }
 
   .textarea[data-status="success"] {
-    @apply text-foreground bg-background block p-2.5 w-full text-sm rounded-lg border bg-green-50  border-green-500 focus:ring-green-500 focus:border-green-500 dark:bg-gray-700 dark:border-green-500;
+    @apply text-foreground bg-green-50 dark:bg-background block p-2.5 w-full text-sm rounded-lg border   border-green-500 focus:ring-green-500 focus:border-green-500  dark:border-green-500;
   }
 
   .textarea[data-status="error"] {
-    @apply text-foreground bg-background block p-2.5 w-full text-sm bg-red-50 border border-red-500 rounded-lg focus:ring-red-500 dark:bg-gray-700 focus:border-red-500  dark:border-red-500;
+    @apply text-foreground bg-red-50 dark:bg-background block p-2.5 w-full text-sm  border border-red-500 rounded-lg focus:ring-red-500  focus:border-red-500  dark:border-red-500;
   }
 
-  .text-input {
-    @apply text-foreground bg-background border border-gray-300  text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400  dark:focus:ring-blue-500 dark:focus:border-blue-500;
+  .text-field {
+    @apply text-foreground bg-background border dark:border-gray-100  text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:placeholder-gray-400  dark:focus:ring-blue-500 dark:focus:border-blue-500;
   }
 
-  .text-input[data-status="success"] {
-    @apply text-foreground bg-background text-sm rounded-lg block w-full p-2.5 bg-green-50 border border-green-500 focus:ring-green-500 focus:border-green-500 dark:bg-gray-700 dark:border-green-500;
+  .text-field[data-status="success"] {
+    @apply text-foreground bg-green-50 dark:bg-background text-sm rounded-lg block w-full p-2.5 border border-green-500 focus:ring-green-500 focus:border-green-500  dark:border-green-500;
   }
 
-  .text-input[data-status="error"] {
-    @apply text-foreground bg-background  bg-red-50 border border-red-500 text-sm rounded-lg focus:ring-red-500 dark:bg-gray-700 focus:border-red-500 block w-full p-2.5 dark:border-red-500;
+  .text-field[data-status="error"] {
+    @apply text-foreground bg-red-50 dark:bg-background border border-red-500 text-sm rounded-lg focus:ring-red-500  focus:border-red-500 block w-full p-2.5 dark:border-red-500;
   }
 
   /* RANDOM GLOBAL OVERWRITES */
@@ -135,18 +176,18 @@
   }
 
   /* RESET CHROME AUTOFILL STYLES */
-  input.text-input:-webkit-autofill,
-  input.text-input:-webkit-autofill:hover,
-  input.text-input:-webkit-autofill:focus,
-  input.text-input:-webkit-autofill:active {
+  input.text-field:-webkit-autofill,
+  input.text-field:-webkit-autofill:hover,
+  input.text-field:-webkit-autofill:focus,
+  input.text-field:-webkit-autofill:active {
     -webkit-text-fill-color: hsl(0 0% 3.9%) !important;
     transition: background-color 5000s ease-in-out 0s;
   }
 
-  .dark input.text-input:-webkit-autofill,
-  .dark input.text-input:-webkit-autofill:hover,
-  .dark input.text-input:-webkit-autofill:focus,
-  .dark input.text-input:-webkit-autofill:active {
+  .dark input.text-field:-webkit-autofill,
+  .dark input.text-field:-webkit-autofill:hover,
+  .dark input.text-field:-webkit-autofill:focus,
+  .dark input.text-field:-webkit-autofill:active {
     -webkit-text-fill-color: hsl(0 0% 98%) !important;
     transition: background-color 5000s ease-in-out 0s;
   }
