--- a/src/components/GoogleAnalytics.astro
+++ b/src/components/GoogleAnalytics.astro
@@ -3,16 +3,14 @@ const GA_ID = import.meta.env.PUBLIC_GA_ID;
 ---
 
 <!-- Google Analytics Script -->
-<script type="text/partytown" define:vars={{ GA_ID }}>
+<script async src={`https://www.googletagmanager.com/gtag/js?id=${GA_ID}`}
+></script>
+<script define:vars={{ GA_ID }}>
   window.dataLayer = window.dataLayer || [];
   function gtag() {
     dataLayer.push(arguments);
   }
   gtag("js", new Date());
+
   gtag("config", GA_ID);
 </script>
-
-<script
-  type="text/partytown"
-  async
-  src={`https://www.googletagmanager.com/gtag/js?id=${GA_ID}`}></script>
