--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -4,6 +4,7 @@ import Footer from "../components/Footer.astro";
 import Navbar from "../components/Navbar.astro";
 import type { CollectionEntry } from "astro:content";
 import { getEntry } from "astro:content";
+import GoogleAnalytics from "@/components/GoogleAnalytics.astro";
 
 const homeUiContent: CollectionEntry<"home"> = await getEntry(
   "home",
@@ -57,6 +58,7 @@ const schema = {
     <meta name="twitter:title" content={siteName} />
     <meta name="twitter:description" content={siteDescription} />
     <meta name="twitter:image" content={siteImage} />
+    <GoogleAnalytics />
 
     <script type="application/ld+json" set:html={JSON.stringify(schema)} />
 
