Add sprint planner project

--- a/src/pages/maintenance.astro
+++ b/src/pages/maintenance.astro
@@ -10,7 +10,7 @@ import { Image } from "astro:assets";
     <p>Check back soon!</p>
     <div class="mt-8">
       <Image
-        src={`/images/under_construction.png`}
+        src="https://res.cloudinary.com/dceqefagi/image/upload/v1740235525/portfolio/under_construction_wwsckc.png"
         class="rounded-lg"
         alt="Website Construction"
         width={640}
