--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -50,7 +50,7 @@ if (entry.data.mainImage.url.startsWith("https")) {
     <div class="max-w-lg justify-center flex flex-col space-y-7">
       <div class="flex flex-col md:flex-row">
         <span class="font-medium">Visit the project:</span>
-        <a class="link flex ml-2" href={entry.data.projectURL}
+        <a class="link flex ml-2" target="_blank" href={entry.data.projectURL}
           >{entry.data.projectURL.replace("https://", "")}<ExternalLinkIcon
             customClasses="ml-2 hidden sm:block"
           /></a
@@ -66,7 +66,7 @@ if (entry.data.mainImage.url.startsWith("https")) {
             <div class="ml-3 mt-2 flex flex-col space-y-3">
               {entry.data.githubRepoLinks.map((repo: string) => {
                 return (
-                  <a class="link flex items-center" href={repo}>
+                  <a class="link flex items-center" target="_blank" href={repo}>
                     {repo.replace("https://", "")}
                     <GithubIcon customClasses="ml-2 hidden sm:block" />
                   </a>
@@ -76,6 +76,7 @@ if (entry.data.mainImage.url.startsWith("https")) {
           ) : (
             <a
               class="link inline-flex items-center ml-2"
+              target="_blank"
               href={entry.data.githubRepoLinks[0]}
             >
               {entry.data.githubRepoLinks[0].replace("https://", "")}
