--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -22,15 +22,15 @@ const { Content } = await aboutUiContent.render();
   <BreadCrumbs />
   <section class="flex flex-col justify-center items-center w-full">
     <h1>About Me</h1>
-    <!-- <div class="flex items-center justify-center mt-8 md:mt-12">
+    <div class="flex items-center justify-center mt-8 md:mt-12">
       <Image
-        src="https://res.cloudinary.com/dceqefagi/image/upload/v1735266034/default-avatar_r1t1ua.svg"
+        src="https://res.cloudinary.com/dceqefagi/image/upload/v1740513971/portfolio/abdul_aliyev_i1obf5.jpg"
         class="min-h-20 md:w-36 md:h-36 rounded-full w-24 h-24 shadow-lg"
         alt="Abdul Aliyev Photo"
         width={200}
         height={200}
       />
-    </div> -->
+    </div>
 
     <article
       id="about-me-content-section"
