--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,25 +24,17 @@ const { Content } = await homeUiContent.render();
 ---
 
 <MainLayout>
-  <!-- <section class="grid grid-cols-1 gap-5 lg:grid-cols-2">
-    <div class="w-full flex justify-center items-center md:mb-0">
-      <div class="flex items-center justify-center">
-        <Image
-          src="https://res.cloudinary.com/dceqefagi/image/upload/v1735266034/default-avatar_r1t1ua.svg"
-          class="min-h-20 md:w-36 md:h-36 rounded-full w-24 h-24 shadow-lg"
-          alt="Abdul Aliyev Photo"
-          width={200}
-          height={200}
-        />
-      </div>
-    </div>
-    <div>
-      <h1 class="mb-5 md:mb-8 md:leading-relaxed text-center">{mainTitle}</h1>
-      <article class="leading-relaxed md:leading-loose"><Content /></article>
-    </div>
-  </section> -->
   <section class="max-w-2xl flex flex-col items-center justify-center mx-auto">
     <h1 class="mb-5 md:mb-8 md:leading-relaxed text-center">{mainTitle}</h1>
+    <div class="flex items-center justify-center mb-4 md:mb-8">
+      <Image
+        src="https://res.cloudinary.com/dceqefagi/image/upload/v1740513971/portfolio/abdul_aliyev_i1obf5.jpg"
+        class="min-h-20 md:w-36 md:h-36 rounded-full w-24 h-24 shadow-lg"
+        alt="Abdul Aliyev Photo"
+        width={200}
+        height={200}
+      />
+    </div>
     <article class="leading-relaxed md:leading-loose"><Content /></article>
     <p class="mt-3">
       If you&apos;re interested in learning more about my work, let&apos;s
