Prefetch avatar image

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -70,6 +70,10 @@ const schema = {
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400..800&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="prefetch"
+      href="https://res.cloudinary.com/dceqefagi/image/upload/v1740513971/portfolio/abdul_aliyev_i1obf5.jpg"
+    />
     <title>{`${siteTitle} | ${title}`}</title>
   </head>
   <body>
