--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -29,9 +29,9 @@ if (project.data.thumbnail.url.startsWith("https")) {
   <div class="p-5 flex flex-col flex-grow">
     <div class="flex-grow">
       <a href={"/projects/" + project.slug}>
-        <h5 class="mb-2 text-2xl font-bold tracking-tight">
+        <p class="mb-2 text-2xl font-bold tracking-tight">
           {project.data.title}
-        </h5>
+        </p>
       </a>
       <p class="mb-4 font-normal">
         {project.data.excerpt}
