--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -3,6 +3,7 @@ import { MoonIcon, SunIcon } from "astro-feather";
 ---
 
 <button id="themeToggle" class="border-none background-none">
+  <span class="sr-only">Toggle Theme from Light to Dark</span>
   <span class="sun hidden dark:inline"><SunIcon /></span>
   <span class="moon inline dark:hidden"><MoonIcon /></span>
 </button>
