--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -86,5 +86,9 @@ const schema = {
       is:inline
       src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"
     ></script>
+    <script>
+  window.CHATBOT_API_URL = 'https://chatbot.aaliyev.com';
+</script>
+    <script src="https://chatbot.aaliyev.com/widget.js" defer></script>
   </body>
 </html>
