--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -89,6 +89,6 @@ const schema = {
     <script>
   window.CHATBOT_API_URL = 'https://chatbot.aaliyev.com';
 </script>
-    <script src="https://chatbot.aaliyev.com/widget.js" defer></script>
+    <!-- <script src="https://chatbot.aaliyev.com/widget.js" defer></script> -->
   </body>
 </html>
