--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -8,6 +8,8 @@ import GoogleAnalytics from "@/components/GoogleAnalytics.astro";
 
 const DISPLAY_CHATBOT = import.meta.env.DISPLAY_CHATBOT || false;
 const CHATBOT_API_URL = import.meta.env.CHATBOT_API_URL;
+const CHATBOT_API_TOKEN = import.meta.env.CHATBOT_API_TOKEN;
+const CHATBOT_TURNSTILE_SITE_KEY = import.meta.env.CHATBOT_TURNSTILE_SITE_KEY;
 
 const homeUiContent: CollectionEntry<"home"> = await getEntry(
   "home",
@@ -89,8 +91,10 @@ const schema = {
       is:inline
       src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"
     ></script>
-    <script is:inline define:vars={{ CHATBOT_API_URL }}>
+    <script is:inline define:vars={{ CHATBOT_API_URL, CHATBOT_API_TOKEN, CHATBOT_TURNSTILE_SITE_KEY }}>
       window.CHATBOT_API_URL = CHATBOT_API_URL;
+      window.CHATBOT_API_TOKEN = CHATBOT_API_TOKEN;
+      window.CHATBOT_TURNSTILE_SITE_KEY = CHATBOT_TURNSTILE_SITE_KEY;
     </script>
     {DISPLAY_CHATBOT && (<script is:inline src={`${CHATBOT_API_URL}/widget.js`} defer></script>)}
   </body>
